# timesheets-backend

./: .env  Cargo.toml
migrations/2021-06-30-163306_create_users/: down.sql  up.sql
migrations/2021-07-05-111448_tokens/: down.sql  up.sql
migrations/2021-07-05-113124_tokens_default_timestamp/: down.sql  up.sql
src/: config.rs  main.rs  schema.rs
src/database/: mod.rs  projects.rs
src/database/authorization/: get_user.rs  mod.rs  token.rs
src/database/projects/: add.rs  get.rs  mod.rs
src/handlers/: mod.rs
src/handlers/authentication/: login.rs  mod.rs  registration.rs
src/handlers/currencies/: mod.rs
src/routes/: authentication.rs  currencies.rs  mod.rs  projects.rs  routes.rs  routes_setup.rs
src/routes/guards/: authorized_user_id.rs  mod.rs
src/routes/route_objects/: currencies_response.rs  error_response.rs  login_request.rs  login_response.rs  mod.rs  new_project_request.rs  projects_list_response.rs  registration_request.rs
