[package]
name = "timesheets_api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.2", default-features = false }
diesel = { version = "1.4.4", features = ["postgres", "uuidv07"] }
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.44"
diesel_migrations = "1.4.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
dotenv = "0.15.0"
argon2 = "0.2.1"
rand_core = { version = "0.6", features = ["std"] }

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["json", "diesel_postgres_pool"]